syntax = "proto3";
option go_package = "octavius/internal/pkg/protofiles/executor_CP";

import "internal/pkg/protofiles/executor_CP/ping_message.proto";
import "internal/pkg/protofiles/executor_CP/register_message.proto";

service ExecutorCPServices{
    rpc HealthCheck(Ping) returns (HealthResponse);
    rpc Register(RegisterRequest) returns(RegisterResponse);
}